--- a/index.html
+++ b/index.html
@@ -62,14 +62,16 @@
 
 	
 
-	<!-- Hero Section -->
-
+	
 	<main class="main-container">
+
+		<!-- Hero Section -->
+
 		<section class="container-fluid hero-container">
 			<div class="row">
 				<div class="col left-hero">
 					<div>
-						<p class="greeting text-uppercase">Kamusta, I'm Mica!</p>
+						<p class="subheadline-1 text-uppercase">Kamusta, I'm Mica!</p>
 						<h1 class="hero-title">Designing for impact, developing for success</h1>
 						<a href="#" class="cta-button">Know Me More ✨</a>
 					</div>
@@ -80,18 +82,57 @@
 				</div>
 			</div>
 		</section>
+
+
+		<!-- About Section -->
+
+		<section class="row about-container container-fluid">
+			<div class="col text-center ">
+				<div>
+					<p class="text-uppercase subheadline-2">What I Do</p>
+					<h3 class="m-5 px-auto">I help e-commerce businesses increase their online sales through effective design and development solutions.</h3>
+					<p class="m-5 px-auto"> Whether it's creating a visually appealing website or streamlining the checkout process, I use my expertise in design and development to enhance the user experience and drive conversions. From product pages to shopping carts, I take a holistic approach to design and development to ensure that every aspect of the customer journey is optimized for success.</p>
+				</div>
+			</div>
+		</section>
+
+
+		<!-- Projects Section -->
+
+		<section class="projects-section">
+			<div class="row container-fluid">
+				<div class="col">
+					<div class="projects-text">
+						<p class="text-uppercase subheadline">My Projects</p>
+						<h3 class="">Take a look at my work samples</h3>
+					</div>
+				</div>
+			</div>
+			<div class="row container-fluid">
+				<div class="col-4 justify-content-center align-items-center">
+					<img src="./images/1.png" class="project-images">
+				</div> 
+				<div class="col-4 justify-content-center align-items-center">
+					<img src="./images/2.png" class="project-images">
+				</div>
+				<div class="col-4 justify-content-center align-items-center">
+					<img src="./images/3.png" class="project-images">
+				</div>
+			</div>
+		</section>
+
+
+
+
+
+
+
 	</main>
 
 
 
 
 
-<!-- <div class="left-hero">
-				
-			</div>
-			<div class="right-hero">
-				
-			</div> -->
 
 
 
@@ -105,9 +146,8 @@
 
 
 
+	<!-- Bootstrap Script -->
+	<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js" integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN" crossorigin="anonymous"></script>
 
-			<!-- Bootstrap Script -->
-			<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js" integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN" crossorigin="anonymous"></script>
-
-		</body>
-		</html>
+</body>
+</html>
