Reformatted projects images and added captions on projects section

--- a/index.html
+++ b/index.html
@@ -108,15 +108,25 @@
 					</div>
 				</div>
 			</div>
-			<div class="row container-fluid">
-				<div class="col-4 justify-content-center align-items-center">
-					<img src="./images/1.png" class="project-images">
+			<div class="row container-fluid margin-left">
+				<div class="col-4 justify-content-center align-items-center d-flex flex-column pb-5">
+					<img src="./images/1.png" class="project-images" alt="Elephant Moon Website Project">
+					<div>
+						<p class="text-center pt-3">Elephant Moon</p>
+					</div>
+					
 				</div> 
-				<div class="col-4 justify-content-center align-items-center">
-					<img src="./images/2.png" class="project-images">
+				<div class="col-4 justify-content-center align-items-center d-flex flex-column pb-5">
+					<img src="./images/2.png" class="project-images" alt="Squeaky Cats Website Project">
+					<div>
+						<p class="text-center pt-3">Squeaky Cats</p>
+					</div>
 				</div>
-				<div class="col-4 justify-content-center align-items-center">
-					<img src="./images/3.png" class="project-images">
+				<div class="col-4 justify-content-center align-items-center d-flex flex-column pb-5">
+					<img src="./images/3.png" class="project-images" alt="Casa Code Website Project">
+					<div>
+						<p class="text-center pt-3">Casa Code</p>
+					</div>
 				</div>
 			</div>
 		</section>
