Finished the desktop version of site

--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
 					<p class="text-uppercase subheadline-2">What I Do</p>
 					<h3 class="m-5 px-auto">I help e-commerce businesses increase their online sales through effective design and development solutions.</h3>
 					<p class="m-5 px-auto"> Whether it's creating a visually appealing website or streamlining the checkout process, I use my expertise in design and development to enhance the user experience and drive conversions. From product pages to shopping carts, I take a holistic approach to design and development to ensure that every aspect of the customer journey is optimized for success.</p>
-					<a href="#" class="cta-button">Let's Collaborate! 🙌</a>
+					<a href="#cta" class="cta-button">Let's Collaborate! 🙌</a>
 				</div>
 			</div>
 		</section>
@@ -150,12 +150,12 @@
 							<p class="my-5 px-auto contact-desc">I'd love to know your visions and see if I could help bring it to life! Let's get in touch by completing the form below.</p>
 						</div>
 
-						<form action="https://www.google.com">
+						<form action="mailto:mtdesignco.ph@gmail.com?subject=Hey%2C%20Mica!%20I%20want%20to%20work%20with%20you">
 							<div class="form-fields">
 								<div class="name-email">
 									<div class="mb-3 pe-2 text-start">
 										<label for="name"  class="form-label text-uppercase form-text">Name</label>
-										<input type="text" class="form-control" id="name" required autocomplete/>
+										<input type="text" class="form-control" id="name"autocomplete/>
 									</div>
 									<div class="mb-3 text-start">
 										<label for="email" class="form-label text-uppercase form-text">Email</label>
@@ -169,7 +169,7 @@
 									<textarea name="message" rows="5" class="form-control" id="name" required autocomplete></textarea>
 								</div>
 								<div class="btn-container">
-									<button type="submit" class="btn btn-primary send-message-btn">Send Message</button>
+									<button type="submit" class="btn btn-primary send-message-btn text-uppercase">Send Message</button>
 								</div>
 							</div>
 							
