Fixed hover states of links

--- a/index.html
+++ b/index.html
@@ -160,13 +160,13 @@
 									<div class="mb-3 text-start">
 										<label for="email" class="form-label text-uppercase form-text">Email</label>
 										<span class="text-danger">*</span>
-										<input type="email" class="form-control" id="email"/>
+										<input type="email" class="form-control" id="email" required autocomplete>
 									</div>
 								</div>
 								<div class="mb-3 text-start">
 									<label for="message"  class="form-label text-uppercase form-text">Message</label>
 									<span class="text-danger">*</span>
-									<textarea name="message" rows="5" class="form-control" id="name" required autocomplete></textarea>
+									<textarea name="message" rows="5" class="form-control" id="name" required></textarea>
 								</div>
 								<div class="btn-container">
 									<button type="submit" class="btn btn-primary send-message-btn text-uppercase">Send Message</button>
@@ -200,7 +200,7 @@
 							<a class="footer-nav-link" href="#projects">Projects</a>
 						</li>
 						<li>
-							<a class="footer-nav-link" href="#contact">Contact</a>
+							<a class="footer-nav-link" href="#cta">Contact</a>
 						</li>
 						<li>
 							<a class="footer-nav-link" href="#top">Back to Top</a>
